# youth_policy

./: .env.example  .gitignore  README.md  app.py  build_base_docs.py  config.py  experiment_pipeline.py  generate_dataset.py  main copy.py  main.py  pipeline.py  pyproject.toml  test.py
chain/: rag_chain.py
core/: chunker.py  data_loader.py  embedder.py  embedder_vectorstore.py  finance_loader.py  housing_loader.py  loader.py  metadata.py  reranker.py  retriever.py
data/: fianace_metadata.json  finance_chunks.json  finance_chunks2.json  finance_chunks3.json  finance_documents.json  metadata.json  output.json  output_v2.json
data/chunks/: finance_character.json  finance_character_size1200.json  finance_character_size500.json  finance_character_size800.json  finance_markdown.json  finance_markdown_size1200.json  finance_markdown_size500.json  finance_markdown_size800.json  finance_recursive.json  finance_recursive_size1200.json  finance_recursive_size500.json  finance_recursive_size800.json  finance_recursive_v2.json  finance_semantic_t70.json  finance_semantic_t85.json  finance_semantic_t95.json  housing_character_size800.json  housing_markdown.json  housing_markdown_size300.json  housing_markdown_size500.json  housing_markdown_size800.json  housing_semantic_t85.json  housing_semantic_t95.json
db/chroma_db/: chroma.sqlite3
db/chroma_db_v2/: chroma.sqlite3
eval/: dataset.jsonl  evaluators.py  langsmith_eval.py  ragas_eval.py  run_experiment.py
evaluator/: chunker_exp.py  create_testset.py  eval_all.json  eval_finance.json  eval_housing.json  evaluate_Ragas.py  evaluate_retrieval.py  experiment_chunking.py  retrieval_results.json
evaluator/ragas_results/: finance_character_size800.csv  finance_character_size800_3.csv  finance_recursive_size1200.csv  finance_recursive_size1200_3.csv  finance_recursive_size500_3.csv  housing_recursive_size300_3.csv  housing_recursive_size800.csv  housing_recursive_size800_3.csv  housing_semantic_t85.csv  housing_semantic_t85_3.csv  ragas_summary.csv  ragas_summary_3.csv
experiments/: evaluate_ragas.py  evaluate_ragas_fast.py  evaluate_ragas_precise.py  run_rag_eval.py  run_rag_eval_fast.py  run_rag_eval_precise.py
kiyongTests/: eval_ensemble.csv  eval_multiquery.csv  eval_result.csv  eval_summary.csv  eval_vector.csv  generate_testset.py  run_eval.py  testset.csv
sb_test/: testset.csv
sb_test/eval/: ci_gate.py  langsmith_eval.py  practice_eval.ipynb  run_experiment.py  schema.json
scripts/: run_embed.py
src/chunking/: chunker.ipynb  push_sb.ipynb
src/pipeline/: askllm.py  test_chain.ipynb
src/pipeline/data/json_data_db/: chroma.sqlite3
