[project]
name = "youth_policy_project"
version = "0.1.0"
description = "청년 정책 프로젝트"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0,<1",
    "langchain-core>=0,<1",
    "langchain-experimental>=0,<1",
    "langchain-community>=0,<1",
    "langchain-openai>=0,<1",
    "langchain-anthropic>=0,<1",
    "langchain-text-splitters>=0,<1",
    "langchain-elasticsearch>=0,<1",
    "langchain-chroma>=0,<1",
    "langchain-cohere>=0,<1",
    "langchain-milvus>=0,<1",
    "langchain-google-genai>=2,<3",
    "langchain-huggingface>=0,<1",
    "langchain-azure-ai>=0,<1",
    "langchain-teddynote>=0,<1",
    "langchainhub>=0,<1",
    "langgraph>=0,<1",
    "langsmith>=0,<1",
    "huggingface-hub>=0,<1",
    "openai>=1,<3",
    "deepl>=1,<2",
    "kiwipiepy>=0,<1",
    "konlpy>=0,<1",
    # 데이터 처리 및 분석 관련 패키지
    "pandas>=2,<3",
    "rank-bm25>=0,<1",
    # 데이터베이스 및 캐시 관련 패키지
    "redis>=5,<6",
    "chromadb>=0,<1",
    # PDF 및 파일 처리 관련 패키지
    "pymupdf>=1,<2",
    "pypdf>=4,<5",
    "pdfplumber>=0,<1",
    "pdfminer-six==20231228",
    "pymupdf4llm>=0,<1",
    # 시각화 및 사용자 인터페이스 관련 패키지
    "matplotlib>=3,<4",
    "streamlit>=1,<2",
    "jupyter>=1,<2",
    "notebook>=7,<8",
    "faiss-cpu>=1,<2",
    # 기타 유틸리티 및 필수 패키지
    "python-dotenv>=1,<2",
    "pydantic>=2,<3",
    "lxml>=5,<6",
    "pillow>=10,<11",
    "lark>=1,<2",
    "ragas>=0.4,<0.5",
    "unstructured[all-docs]>=0,<1",
    "arxiv>=2,<3",
    "tiktoken>=0,<1",
    "tenacity>=8,<9",
    "pymilvus>=2,<3",
    "google-search-results>=2,<3",
    "protobuf>=3,<4",
    "sqlalchemy>=2,<3",
    "llama-index-core>=0,<1",
    "llama-parse>=0,<1",
    "llama-index-readers-file>=0,<1",
    "flashrank>=0,<1",
    "docx2txt>=0,<1",
    "nest-asyncio>=1,<2",
    "rapidocr-onnxruntime>=1,<2",
    "seaborn>=0,<1",
    "grandalf>=0,<1",
    "rouge-score>=0,<1",
    "langchain-ollama>=0,<1",
    "mypy>=1,<2",
    "pinecone>=5,<6",
    "wikipedia>=1,<2",
    "scikit-learn>=1,<2",
    "ipykernel",
    "langchain-upstage>=0.7.4",
    "sentence-transformers>=5.3.0",
    "python-pptx>=1.0.2",
    "jq>=1.11.0",
    "chardet<6",
    "langchain-pinecone>=0.2.3",
    "milvus-lite>=2.5.1",
    "setuptools<72",
    "llama-cpp-python>=0.3.19",
    "gpt4all>=2.8.2",
    "umap-learn>=0.5,<1",
    "pymilvus>=2,<3",
]
